--- a/udpexample/udpserver.ui
+++ b/udpexample/udpserver.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1368</width>
-    <height>724</height>
+    <height>858</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>50</y>
+     <x>420</x>
+     <y>60</y>
      <width>201</width>
      <height>41</height>
     </rect>
@@ -29,8 +29,8 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>560</x>
-     <y>50</y>
+     <x>720</x>
+     <y>60</y>
      <width>191</width>
      <height>41</height>
     </rect>
@@ -42,8 +42,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>170</y>
+     <x>60</x>
+     <y>140</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -55,8 +55,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>210</y>
+     <x>70</x>
+     <y>180</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -68,8 +68,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>260</y>
+     <x>30</x>
+     <y>230</y>
      <width>101</width>
      <height>17</height>
     </rect>
@@ -81,8 +81,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>310</y>
+     <x>50</x>
+     <y>280</y>
      <width>101</width>
      <height>17</height>
     </rect>
@@ -94,8 +94,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>360</y>
+     <x>50</x>
+     <y>330</y>
      <width>101</width>
      <height>17</height>
     </rect>
@@ -107,8 +107,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>410</y>
+     <x>50</x>
+     <y>380</y>
      <width>101</width>
      <height>17</height>
     </rect>
@@ -120,9 +120,9 @@
   <widget class="QTextBrowser" name="textBrowser">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>160</y>
-     <width>256</width>
+     <x>160</x>
+     <y>130</y>
+     <width>211</width>
      <height>31</height>
     </rect>
    </property>
@@ -130,9 +130,9 @@
   <widget class="QTextBrowser" name="textBrowser_2">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>210</y>
-     <width>256</width>
+     <x>160</x>
+     <y>180</y>
+     <width>211</width>
      <height>31</height>
     </rect>
    </property>
@@ -140,9 +140,9 @@
   <widget class="QTextBrowser" name="textBrowser_3">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>260</y>
-     <width>256</width>
+     <x>160</x>
+     <y>230</y>
+     <width>211</width>
      <height>31</height>
     </rect>
    </property>
@@ -150,9 +150,9 @@
   <widget class="QTextBrowser" name="textBrowser_4">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>310</y>
-     <width>256</width>
+     <x>160</x>
+     <y>280</y>
+     <width>211</width>
      <height>31</height>
     </rect>
    </property>
@@ -160,9 +160,9 @@
   <widget class="QTextBrowser" name="textBrowser_5">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>350</y>
-     <width>256</width>
+     <x>160</x>
+     <y>320</y>
+     <width>211</width>
      <height>31</height>
     </rect>
    </property>
@@ -170,32 +170,19 @@
   <widget class="QTextBrowser" name="textBrowser_6">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>400</y>
-     <width>256</width>
+     <x>160</x>
+     <y>370</y>
+     <width>211</width>
      <height>31</height>
     </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_7">
-   <property name="geometry">
-    <rect>
-     <x>510</x>
-     <y>120</y>
-     <width>61</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>数据部分:</string>
    </property>
   </widget>
   <widget class="QTextBrowser" name="textBrowser_7">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>450</y>
-     <width>251</width>
+     <x>160</x>
+     <y>420</y>
+     <width>211</width>
      <height>31</height>
     </rect>
    </property>
@@ -203,8 +190,8 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>450</y>
+     <x>50</x>
+     <y>420</y>
      <width>101</width>
      <height>17</height>
     </rect>
@@ -216,11 +203,392 @@
   <widget class="QTextBrowser" name="textBrowser_8">
    <property name="geometry">
     <rect>
-     <x>510</x>
-     <y>140</y>
-     <width>641</width>
-     <height>531</height>
+     <x>40</x>
+     <y>470</y>
+     <width>391</width>
+     <height>351</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_9">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>470</y>
+     <width>381</width>
+     <height>351</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_10">
+   <property name="geometry">
+    <rect>
+     <x>870</x>
+     <y>470</y>
+     <width>391</width>
+     <height>351</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>450</y>
+     <width>61</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>数据部分:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_10">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>170</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>通道号</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
+    <rect>
+     <x>430</x>
+     <y>220</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>采样的点个数</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>270</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>报文长度</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_13">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>370</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>校验计数错误</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_11">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>310</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_14">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>410</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>UDP包序号</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_12">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>220</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_13">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>360</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_15">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>440</y>
+     <width>61</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>数据部分:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_16">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>130</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>模拟/数字</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_14">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>120</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_15">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>270</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_16">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>170</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_17">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>410</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_17">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>320</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>超时表示</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_18">
+   <property name="geometry">
+    <rect>
+     <x>870</x>
+     <y>260</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>报文长度</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_18">
+   <property name="geometry">
+    <rect>
+     <x>970</x>
+     <y>400</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_19">
+   <property name="geometry">
+    <rect>
+     <x>970</x>
+     <y>110</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_19">
+   <property name="geometry">
+    <rect>
+     <x>870</x>
+     <y>310</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>超时表示</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_20">
+   <property name="geometry">
+    <rect>
+     <x>970</x>
+     <y>300</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_20">
+   <property name="geometry">
+    <rect>
+     <x>850</x>
+     <y>210</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>采样的点个数</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_21">
+   <property name="geometry">
+    <rect>
+     <x>970</x>
+     <y>210</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_22">
+   <property name="geometry">
+    <rect>
+     <x>970</x>
+     <y>260</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_21">
+   <property name="geometry">
+    <rect>
+     <x>870</x>
+     <y>360</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>校验计数错误</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_22">
+   <property name="geometry">
+    <rect>
+     <x>870</x>
+     <y>400</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>UDP包序号</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_23">
+   <property name="geometry">
+    <rect>
+     <x>970</x>
+     <y>350</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_23">
+   <property name="geometry">
+    <rect>
+     <x>860</x>
+     <y>440</y>
+     <width>61</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>数据部分:</string>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser_24">
+   <property name="geometry">
+    <rect>
+     <x>970</x>
+     <y>160</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_24">
+   <property name="geometry">
+    <rect>
+     <x>880</x>
+     <y>120</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>模拟/数字</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_25">
+   <property name="geometry">
+    <rect>
+     <x>890</x>
+     <y>160</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>通道号</string>
    </property>
   </widget>
  </widget>
